force-app/main/default/objects/Corporate_Finance_Opportunity__c/Corporate_Finance_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Corporate Opportunity</label>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>