force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Opportunities</relationshipLabel>
    <relationshipName>Corporate_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>