force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquirer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Opportunities (Acquirer)</relationshipLabel>
    <relationshipName>Corporate_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>