force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Deal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Close_Date__c</fullName>
    <label>Deal Close Date</label>
    <type>Date</type>
</CustomField>