force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Flirt</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Proposing</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Live Enquiry</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Deal Handling</fullName>
                <isActive>false</isActive>
                <label>Deal Handling</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Pitching</fullName>
                <isActive>false</isActive>
                <label>Pitching</label>
            </value>
            <value>
                <fullName>Project Stage</fullName>
                <isActive>false</isActive>
                <label>Project Stage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>