force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Estimated_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Deal_Value__c</fullName>
    <label>Estimated Deal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>