force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Opportunity_Type_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_Area__c</fullName>
    <label>Opportunity Type Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Type_Area</valueSetName>
    </valueSet>
</CustomField>