force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Potential_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Potential_Deal_Size__c</fullName>
    <label>Potential Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>