force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Private_Equity__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Private Equity</label>
    <referenceTo>Private_Equity__c</referenceTo>
    <relationshipLabel>Corporate Opportunities</relationshipLabel>
    <relationshipName>Corporate_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>