force-app/main/default/objects/Corporate_Finance_Opportunity__c/fields/Transaction_in_next_2_Years__c.field-meta.xml
<CustomField>
    <fullName>Transaction_in_next_2_Years__c</fullName>
    <label>Transaction in next 2 Years?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>